objects/TILBP__TI_LearningPathAction__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TI Learning Path Actions</relationshipLabel>
        <relationshipName>TI_Learning_Path_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__MilestoneName__c</fullName>
        <label>Milestone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__TI_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>TI ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TILBP__TI_SFContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TI Content</label>
        <referenceTo>TILBP__TI_Content__c</referenceTo>
        <relationshipLabel>TI Learning Path Actions</relationshipLabel>
        <relationshipName>TI_Learning_Path_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TI Learning Path Action</label>
    <nameField>
        <displayFormat>TILPA-{0000000}</displayFormat>
        <label>TI Learning Path Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TI Learning Path Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>